# lbg-ipi-hackathon

./: .gitignore  DL1_data.json  DL2_data.json  DL3_data.json  DL4_data.json  README.md  main.py  pyproject.toml  requirements.txt  uk_dl_sample1_data.json  uk_dl_sample2_data.json  uk_dl_sample3_data.json  uk_dl_sample4_data.json  uk_dl_sample5_data.json  uk_dl_sample6_data.json  uk_pp_sample1_data.json  uk_pp_sample4_data.json  uk_pp_sample5_data.json  uk_pp_sample6_data.json
AddressValidator_Agent/: agent.py  prompts.txt
AddressValidator_Agent/.adk/: session.db
AddressValidator_Agent/Data/: readme.txt
AddressValidator_Agent/tools/: AddressValidator.py  createAddressDB.py  schemas.py  test_opensrc.py
DataValidation/: __init__.py  agent.py  customers_validated_remediated.csv  customers_with_address_id.csv  data_validator_agent.py  dq_contract_validator.py  validate_and_remediate_data.py
DataValidation/schemas/: wallet_v2.json
DormantAccounts_Agent/: agent.py
HomeInsurance_Agent/: agent.py  agent_old.txt  all_extracted_ids.json  home_insurance_data.json
HomeInsurance_Agent/data/: home_insurance_data.json
ID Validation Agentt Input & Output/: all_extracted_ids.json
ID_Extractor_Agent/: agent.py
LBG_IPI_DQ_CHECKS/: agent.py
LBG_Integration_Orchestrator/: agent.py
home_insurance/: user_input_data.json
id_data_extractor_agent/: agent.py
insurancepolicymgmt/: agent.py  functional_requirement.txt
policy_agent/: agent.py  agent_1301.py  requirements.txt
policy_parser_agent/: agent.py  agent_1301.py
ui-dashboard/: index.html  main.html
(+120 files in other folders)
