[project]
name = "lbg-ipi-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.22.0",
    "google-api-python-client>=2.187.0",
    "google-cloud-core>=2.5.0",
    "google-cloud-storage>=3.4.1",
    "google-generativeai>=0.8.6",
    "litellm>=1.80.13",
    "pandas>=2.3.3",
    "postal>=1.1.11",
    "psutil>=7.2.1",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
